tests/models/snapshots/records/can_create_one@health.snap
---
source: tests/models/health_records.rs
assertion_line: 184
expression: result
---
Ok(
    HealthRecord {
        id: ID
        animal_pid: PID,
        organisation_pid: PID,
        condition: "vaccination",
        status: "active",
        severity: "low",
        record_date: DATE,
        description: "Innoculation of Rocky against foot and mouth disease",
        treatment: Some(
            "vaccine injection",
        ),
        medicine: Some(
            "Anti-Foot and mouth",
        ),
        dosage: Some(
            "250",
        ),
        cost: Some(
            250.00,
        ),
        performed_by: Some(
            "John Artz",
        ),
        prognosis: None,
        notes: None,
        created_by: PID,
        created_at: DATE,
        updated_at: DATE,
    },
)
