tests/models/snapshots/records/can_create_one@weight.snap
---
source: tests/models/weight.rs
assertion_line: 126
expression: results
---
Ok(
    WeightRecord {
        id: ID
        organisation_pid: PID,
        animal_pid: PID,
        mass: 550.00,
        record_date: DATE,
        notes: None,
        unit: "kg",
        previous_mass: 460.00,
        status: "normal",
        created_by: PID,
        created_at: DATE,
        updated_at: DATE,
    },
)
