tests/models/snapshots/records/can_delete_by_id@health.snap
---
source: tests/models/health_records.rs
assertion_line: 171
expression: result
---
Ok(
    PgQueryResult {
        rows_affected: 1,
    },
)
