tests/models/snapshots/records/can_delete_by_id@production.snap
---
source: tests/models/production_records.rs
assertion_line: 128
expression: result
---
Ok(
    PgQueryResult {
        rows_affected: 1,
    },
)
