tests/models/snapshots/records/can_delete_one@weight.snap
---
source: tests/models/weight.rs
assertion_line: 89
expression: results
---
Ok(
    PgQueryResult {
        rows_affected: 1,
    },
)
