tests/models/snapshots/records/can_find_all_animal_query@production.snap
---
source: tests/models/production_records.rs
assertion_line: 90
expression: result
---
Ok(
    [
        ProductionRecordCleaned {
            id: 101,
            livestock_name: "Daisy",
            animal_pid: b2bd6270-8bec-42ce-99ff-d0eb1a076221,
            organisation_name: "Acme Corp",
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            product_type: "milk",
            quantity: 20.00,
            unit: "litre",
            record_date: 2024-06-21,
            quality: Some(
                "Hight fat milk",
            ),
            notes: None,
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-06-21T10:15:00+00:00,
            updated_at: 2024-06-21T10:15:00+00:00,
        },
    ],
)
