tests/models/snapshots/records/can_find_all_animal_query@weight.snap
---
source: tests/models/weight.rs
assertion_line: 57
expression: results
---
Ok(
    [
        WeightResponse {
            id: 101,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 32.00,
            record_date: 2024-04-10,
            notes: Some(
                "Birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 102,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 64.00,
            record_date: 2024-05-10,
            notes: Some(
                "Month after birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 103,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 100.00,
            record_date: 2024-06-10,
            notes: Some(
                "Two month after birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 104,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 136.00,
            record_date: 2024-07-10,
            notes: Some(
                "Three month after birth weight weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 105,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 168.00,
            record_date: 2024-08-10,
            notes: Some(
                "Four months weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 106,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 202.00,
            record_date: 2024-09-10,
            notes: Some(
                "Five month after birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 107,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 238.00,
            record_date: 2024-10-11,
            notes: Some(
                "Six monts after birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 108,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 276.00,
            record_date: 2024-11-10,
            notes: Some(
                "Seven months after birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 109,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 300.00,
            record_date: 2024-12-10,
            notes: Some(
                "Eight months after birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 110,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 342.00,
            record_date: 2025-01-10,
            notes: Some(
                "Nine months after birth weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 111,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 384.00,
            record_date: 2025-02-10,
            notes: Some(
                "Weaning weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 112,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 426.00,
            record_date: 2025-03-10,
            notes: Some(
                "One month post weaning weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 113,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 460.00,
            record_date: 2025-04-10,
            notes: Some(
                "Yearling weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 114,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 500.00,
            record_date: 2025-05-16,
            notes: Some(
                "Four hundred day weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2025-05-10T07:15:00+00:00,
            updated_at: 2025-05-10T07:15:00+00:00,
        },
        WeightResponse {
            id: 115,
            organisation_pid: 9d5b0c1e-6a48-4bce-b818-dc8c015fd8a0,
            organisation_name: "Acme Corp",
            animal_pid: f6417c11-d817-4626-9e8d-c68a44002d4b,
            animal_name: "Rose",
            animal_tag_id: "AC007",
            mass: 545.00,
            record_date: 2025-06-10,
            notes: Some(
                "Two monts post yearling weight",
            ),
            created_by: bd6f7c26-d2c9-487e-b837-8f77be468033,
            created_by_name: "John Doe",
            created_at: 2024-04-10T07:15:00+00:00,
            updated_at: 2024-04-10T07:15:00+00:00,
        },
    ],
)
